fix bio spacing

--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -147,7 +147,7 @@ p.section__content {
   height: 100%;
   display: flex;
   flex-direction: column;
-  // justify-content: space-around;
+  justify-content: space-around;
   // background: linear-gradient(to bottom, transparent, transparent 40%, #000 100%);
 }
 
